finished initial functionality

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,15 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background: #c1c1c1;
+  --foreground: #121212;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply min-h-screen bg-background text-foreground;
+  }
+
+  h2 {
+    @apply text-[64px] leading-none tracking-[-1%];
   }
 }
